--- a/steps/step1/makefile.pk.ubuntu1410
+++ b/steps/step1/makefile.pk.ubuntu1410
@@ -1,3 +1,4 @@
+# -*-Makefile-*-
 CXX=mpicxx
 BINDIR = bin
 MKDIR_P = mkdir -p
@@ -5,8 +6,8 @@ OUT_DIR= bin
 
 CXXFLAGS= -O3 -Wall 
 
-TACC_CUDA_LIB=$CUDA_ROOT/lib64
-TACC_CUDA_INC=$CUDA_ROOT/include
+CUDA_LIB ?= $(CUDA_ROOT)/lib64
+CUDA_INC ?= $(CUDA_ROOT)/include
 FFTW_LIB=/usr/lib
 FFTW_INC=/usr/include
 LDFLAGS= -L../../lib -laccfft -L$(FFTW_LIB)  -lfftw3 -lfftw3_threads -fopenmp
@@ -14,25 +15,42 @@ LDFLAGS= -L../../lib -laccfft -L$(FFTW_LIB)  -lfftw3 -lfftw3_threads -fopenmp
 INCDIR= -I$(FFTW_INC)  -I../../include/
 
 
-N_FLAGS=-c  -O3 -gencode arch=compute_20,code=sm_20  -Xcompiler -fopenmp -DENABLE_GPU
-N_INC= -I$(TACC_CUDA_INC) -I./ -I$(FFTW_INC) 
-N_LIB= -L$(TACC_CUDA_LIB) -L$(FFTW_LIB)
-
-N_CXXFLAGS= -O3 -lcudart -lcufft -fopenmp -lfftw3 -lfftw3_threads
-N_CXXLIB= -I$(TACC_CUDA_INC) -I$(FFTW_INC)
-N_CXXINC= -L$(TACC_CUDA_LIB) -L$(FFTW_LIB)
-
-#MPI_INC = -I/opt/apps/intel14/mvapich2/2.0b/include   -DMPICH_IGNORE_CXX_SEEK -DMPICH_SKIP_MPICXX
-#MPI_LIB = -L/opt/apps/intel14/mvapich2/2.0b/lib
 MPI_LIB = $(shell mpicxx --showme:link)
 MPI_INC = $(shell mpicxx --showme:compile)
+
+
+N_INC= -I$(CUDA_INC) -I./ -I$(FFTW_INC) 
+N_LIB= -L$(CUDA_LIB) -L$(FFTW_LIB)
+
+N_CXXFLAGS= -O3 -lcudart -lcufft -fopenmp -lfftw3 -lfftw3_threads
+N_CXXINC= -I$(CUDA_INC) -I$(FFTW_INC)
+N_CXXLIB= -L$(CUDA_LIB) -L$(FFTW_LIB)
+
+N_FLAGS = -c -O3 -gencode arch=compute_20,code=sm_20 -Xcompiler -fopenmp -DENABLE_GPU 
+N_FLAGS += -Xcompiler -I../../include
+N_FLAGS += $(addprefix -Xcompiler ,$(MPI_INC))
+N_FLAGS += $(addprefix -Xcompiler ,$(N_INC))
+N_FLAGS += $(addprefix -Xcompiler ,$(N_CXXINC))
+# dirty hack: nvcc doesn't support __float128, so nvcc won't preprocess correctly 
+# fftw3.h
+# by using this trick, we make nvcc's preprocessor avoid this problem...
+# should really find something else here...
+# Do accfft_gpu.h really need to include fftw3.h ?
+N_FLAGS += -D__INTEL_COMPILER
+
 
 all: step1
 
 
 step1.o:	step1.cpp
-	$(CXX) $(CXXFLAGS) -c step1.cpp -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB)
-step1:	step1.o
-	$(CXX) $(CXXFLAGS)  step1.o  $(LDFLAGS)  -o $@ $(INCDIR) 
+	$(CXX) $(CXXFLAGS) -c $^ -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB)
+
+step1_gpu.o: step1_gpu.cu
+	nvcc $^	-o $@ $(N_FLAGS)   
+
+step1:	step1.o step1_gpu.o
+	$(CXX) $(CXXFLAGS) $^  $(LDFLAGS)  -o $@ $(INCDIR) -lcuda -L$(CUDA_LIB) -lcudart
+
+
 clean:
-	-rm *~ *.o step1
+	-rm -f *~ *.o step1
