--- a/makefile.pk.ubuntu1410
+++ b/makefile.pk.ubuntu1410
@@ -6,36 +6,38 @@ OUT_DIR= bin
 
 CXXFLAGS= -O3 -Wall 
 
-TACC_CUDA_LIB=$(CUDA_ROOT)/lib64
-TACC_CUDA_INC=$(CUDA_ROOT)/include
+CUDA_LIB ?= $(CUDA_ROOT)/lib64
+CUDA_INC ?= $(CUDA_ROOT)/include
 FFTW_LIB=/usr/lib
 FFTW_INC=/usr/include
 
 LDFLAGS=  -L$(FFTW_LIB) -lfftw3 -lfftw3_threads -fopenmp
 
-#INCDIR= -I$(FFTW_INC) -I./ -I/work/02187/gholami/maverick/accfft/include/
-INCDIR= -I$(FFTW_INC) -I./ -I/home/pkestene/install/fft/accfft/accfft/include
+INCDIR= -I$(FFTW_INC) -I./ -I/home/pkestene/install/fft/accfft/github_pk/accfft/include
 
-N_FLAGS=-c  -O3 -gencode arch=compute_20,code=sm_20  -Xcompiler -fopenmp -DENABLE_GPU
-N_INC= -I$(TACC_CUDA_INC) -I./ -I./alltoallkway -I$(FFTW_INC) 
-N_LIB= -L$(TACC_CUDA_LIB) -L$(FFTW_LIB)
-
-N_CXXFLAGS= -O3 -lcudart -lcufft -fopenmp -lfftw3 -lfftw3_threads
-N_CXXLIB= -I$(TACC_CUDA_INC) -I$(FFTW_INC)
-N_CXXINC= -L$(TACC_CUDA_LIB) -L$(FFTW_LIB)
-
-#MPI_INC = -I/opt/apps/intel14/mvapich2/2.0b/include   -DMPICH_IGNORE_CXX_SEEK -DMPICH_SKIP_MPICXX
-#MPI_LIB = -L/opt/apps/intel14/mvapich2/2.0b/lib
 MPI_LIB = $(shell mpicxx --showme:link)
 MPI_INC = $(shell mpicxx --showme:compile)
+
+
+N_INC= -I$(CUDA_INC) -I./ -I./alltoallkway -I$(FFTW_INC) 
+N_LIB= -L$(CUDA_LIB) -L$(FFTW_LIB)
+N_FLAGS=-c  -O3 -gencode arch=compute_20,code=sm_20  -Xcompiler -fopenmp -DENABLE_GPU
+N_FLAGS += $(addprefix -Xcompiler , $(N_INC))
+N_FLAGS += $(addprefix -Xcompiler , $(MPI_INC))
+
+
+N_CXXFLAGS= -O3 -lcudart -lcufft -fopenmp -lfftw3 -lfftw3_threads
+N_CXXINC= -I$(CUDA_INC) -I$(FFTW_INC)
+N_CXXLIB= -L$(CUDA_LIB) -L$(FFTW_LIB)
+
 
 all: lib/libaccfft.a
 
 
 transpose_gpu.o: transpose.cpp
-	nvcc transpose.cpp -o transpose_gpu.o $(MPI_INC) $(MPI_DIR) $(N_INC) $(N_LIB) $(N_FLAGS)
-transpose_cuda.o:	transpose_cuda.cu
-	nvcc transpose_cuda.cu -o transpose_cuda.o $(MPI_INC) $(MPI_DIR) $(N_INC) $(N_LIB) $(N_FLAGS)
+	nvcc $^ -o $@ $(N_LIB) $(N_FLAGS)
+transpose_cuda.o: transpose_cuda.cu
+	nvcc $^ -o $@ $(N_LIB) $(N_FLAGS)
 
 src/transpose.o: src/transpose.cpp
 	$(CXX) $(CXXFLAGS) -c src/transpose.cpp -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB)
@@ -50,12 +52,13 @@ lib/libaccfft.a:	src/transpose.o src/accfft.o src/accfft_common.o
 	#echo "export AccFFT_DIR=$(shell pwd)" >> ~/.bashrc
 
 src/accfft_gpu.o: src/accfft_gpu.cpp
-	$(CXX) $(CXXFLAGS) -c src/accfft_gpu.cpp -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB) $(N_CXXFLAGS) $(N_CXXLIB) $(N_CXXINC) -DENABLE_GPU
+	$(CXX) $(CXXFLAGS) -c $^ -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB) $(N_CXXFLAGS) $(N_CXXLIB) $(N_CXXINC) -DENABLE_GPU
 
 src/transpose_gpu.o: src/transpose_gpu.cpp
-	$(CXX) $(CXXFLAGS) -c src/transpose_gpu.cpp -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB) $(N_CXXFLAGS) $(N_CXXLIB) $(N_CXXINC) -DENABLE_GPU
+	$(CXX) $(CXXFLAGS) -c $^ -o $@  $(INCDIR) $(LDFLAGS) $(MPI_INC) $(MPI_LIB) $(N_CXXFLAGS) $(N_CXXLIB) $(N_CXXINC) -DENABLE_GPU
+
 src/transpose_cuda.o: src/transpose_cuda.cu
-	nvcc src/transpose_cuda.cu -o $@ $(MPI_INC) $(MPI_DIR) $(N_INC) $(N_LIB) $(N_FLAGS) -DENABLE_GPU
+	nvcc $^ -o $@ $(N_LIB) $(N_FLAGS) -DENABLE_GPU
 
 lib/libaccfft_gpu.a:	src/transpose_gpu.o src/transpose_cuda.o src/accfft_gpu.o src/accfft_common.o
 	mkdir -p lib
