--- a/steps/step1/makefile.pk.ubuntu1410
+++ b/steps/step1/makefile.pk.ubuntu1410
@@ -1,13 +1,16 @@
 # -*-Makefile-*-
-CXX=mpicxx
+CXX = mpicxx
 BINDIR = bin
 MKDIR_P = mkdir -p
-OUT_DIR= bin
+OUT_DIR = bin
 
 CXXFLAGS= -O3 -Wall 
 
+CUDA_ROOT ?= /usr/local/cuda-6.5
 CUDA_LIB ?= $(CUDA_ROOT)/lib64
 CUDA_INC ?= $(CUDA_ROOT)/include
+CUDA_SM ?= 20
+
 FFTW_LIB=/usr/lib
 FFTW_INC=/usr/include
 LDFLAGS= -L../../lib -laccfft -L$(FFTW_LIB)  -lfftw3 -lfftw3_threads -fopenmp
@@ -27,7 +30,7 @@ N_CXXFLAGS= -O3 -lcudart -lcufft -fopenmp -lfftw3 -lfftw3_threads
 N_CXXINC= -I$(CUDA_INC) -I$(FFTW_INC)
 N_CXXLIB= -L$(CUDA_LIB) -L$(FFTW_LIB)
 
-N_FLAGS = -c -O3 -gencode arch=compute_20,code=sm_20 -Xcompiler -fopenmp -DENABLE_GPU 
+N_FLAGS = -c -O3 -gencode arch=compute_$(CUDA_SM),code=sm_$(CUDA_SM) -Xcompiler -fopenmp -DENABLE_GPU 
 N_FLAGS += -Xcompiler -I../../include
 N_FLAGS += $(addprefix -Xcompiler ,$(MPI_INC))
 N_FLAGS += $(addprefix -Xcompiler ,$(N_INC))
