add fft-based poisson solver example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,4 +145,5 @@ endif(BUILD_GPU)
 ####################
 if(BUILD_STEPS)
 add_subdirectory(steps/step1)
+add_subdirectory(steps/step4)
 endif(BUILD_STEPS)
