--- a/steps/step4/CMakeLists.txt
+++ b/steps/step4/CMakeLists.txt
@@ -9,34 +9,34 @@ include_directories(${FFTW_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # source files list
-set (poisson3d_cpu_SRCS
-  poisson3d_cpu.cpp
+set (step4_SRCS
+  step4.cpp
 )
 
 #
 # CPU executable
 #
-add_executable(poisson3d_cpu ${poisson3d_cpu_SRCS})
-target_link_libraries(poisson3d_cpu
+add_executable(step4 ${step4_SRCS})
+target_link_libraries(step4
   accfft
   accfft_utils
   ${FFTW_LIBRARIES}
 )
 if (PNETCDF_FOUND)
-  target_link_libraries(poisson3d_cpu ${PNETCDF_LIBRARIES})
+  target_link_libraries(step4 ${PNETCDF_LIBRARIES})
 endif()
 
 #
 # GPU executable
 #
 if(BUILD_GPU)
-  set(poisson3d_gpu_SRCS
-    poisson3d_gpu.cpp kernels.cu
+  set(step4_gpu_SRCS
+    step4_gpu.cpp kernels.cu
     )
   
-  cuda_add_executable(poisson3d_gpu ${poisson3d_gpu_SRCS})
-  set_target_properties(poisson3d_gpu PROPERTIES COMPILE_FLAGS "-DENABLE_GPU")
-  target_link_libraries(poisson3d_gpu
+  cuda_add_executable(step4_gpu ${step4_gpu_SRCS})
+  set_target_properties(step4_gpu PROPERTIES COMPILE_FLAGS "-DENABLE_GPU")
+  target_link_libraries(step4_gpu
     accfft_gpu
     accfft_utils
     ${FFTW_LIBRARIES}
@@ -44,8 +44,8 @@ if(BUILD_GPU)
   )
 
   if (PNETCDF_FOUND)
-    target_link_libraries(poisson3d_gpu ${PNETCDF_LIBRARIES})
+    target_link_libraries(step4_gpu ${PNETCDF_LIBRARIES})
   endif()
 
-  cuda_add_cufft_to_target(poisson3d_gpu)
+  cuda_add_cufft_to_target(step4_gpu)
 endif(BUILD_GPU)
