--- a/steps/step3/CMakeLists.txt
+++ b/steps/step3/CMakeLists.txt
@@ -9,34 +9,34 @@ include_directories(${FFTW_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # source files list
-set (step1_SRCS
-  step1.cpp
+set (step3_SRCS
+  step3.cpp
 )
 
 #
 # CPU executable
 #
-add_executable(step1 ${step1_SRCS})
-target_link_libraries(step1
+add_executable(step3 ${step3_SRCS})
+target_link_libraries(step3
   accfft
   accfft_utils
   ${FFTW_LIBRARIES}
 )
 if (PNETCDF_FOUND)
-  target_link_libraries(step1 ${PNETCDF_LIBRARIES})
+  target_link_libraries(step3 ${PNETCDF_LIBRARIES})
 endif()
 
 #
 # GPU executable
 #
 if(BUILD_GPU)
-  set(step1_gpu_SRCS
-    step1_gpu.cpp kernels.cu
+  set(step3_gpu_SRCS
+    step3_gpu.cpp
     )
   
-  cuda_add_executable(step1_gpu ${step1_gpu_SRCS})
-  set_target_properties(step1_gpu PROPERTIES COMPILE_FLAGS "-DENABLE_GPU")
-  target_link_libraries(step1_gpu
+  cuda_add_executable(step3_gpu ${step3_gpu_SRCS})
+  set_target_properties(step3_gpu PROPERTIES COMPILE_FLAGS "-DENABLE_GPU")
+  target_link_libraries(step3_gpu
     accfft_gpu
     accfft_utils
     ${FFTW_LIBRARIES}
@@ -44,8 +44,8 @@ if(BUILD_GPU)
   )
 
   if (PNETCDF_FOUND)
-    target_link_libraries(step1_gpu ${PNETCDF_LIBRARIES})
+    target_link_libraries(step3_gpu ${PNETCDF_LIBRARIES})
   endif()
 
-  cuda_add_cufft_to_target(step1_gpu)
+  cuda_add_cufft_to_target(step3_gpu)
 endif(BUILD_GPU)
