--- a/steps/step5/CMakeLists.txt
+++ b/steps/step5/CMakeLists.txt
@@ -20,7 +20,10 @@ add_executable(step5f ${step5f_SRCS})
 target_link_libraries(step5f
   accfft
   accfft_utils
-  ${FFTW_LIBRARIES}
+  ${FFTW_LIB}
+  ${FFTW_THREADS_LIB}
+  ${FFTWF_LIB}
+  ${FFTWF_THREADS_LIB}
 )
 if (PNETCDF_FOUND)
   target_link_libraries(step5f ${PNETCDF_LIBRARIES})
@@ -38,7 +41,8 @@ add_executable(step5 ${step5_SRCS})
 target_link_libraries(step5
   accfft
   accfft_utils
-  ${FFTW_LIBRARIES}
+  ${FFTW_LIB}
+  ${FFTW_THREADS_LIB}
 )
 if (PNETCDF_FOUND)
   target_link_libraries(step5 ${PNETCDF_LIBRARIES})
@@ -57,7 +61,8 @@ if(BUILD_GPU)
   target_link_libraries(step5_gpuf
     accfft_gpu
     accfft_utils_gpu
-    ${FFTW_LIBRARIES}
+    ${FFTW_LIB}
+    ${FFTW_THREADS_LIB}
     ${CUDA_LIBRARIES}
   )
 
@@ -80,7 +85,8 @@ if(BUILD_GPU)
   target_link_libraries(step5_gpu
     accfft_gpu
     accfft_utils_gpu
-    ${FFTW_LIBRARIES}
+    ${FFTW_LIB}
+    ${FFTW_THREADS_LIB}
     ${CUDA_LIBRARIES}
   )
 
