Fixed linking of step* executables when producing shared libraries
Before this commit the library was not able to link the 'step*'
executables when giving '-DBUILD_SHARED=true' (undefined references to
a few symbols).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ if(BUILD_SHARED_LIBS)
 else(BUILD_SHARED_LIBS)
   add_library(accfft STATIC ${libaccfft_SRCS})
 endif(BUILD_SHARED_LIBS)
+target_link_libraries(accfft ${FFTW_LIB} ${FFTWF_LIB})
 
 # install
 install(TARGETS accfft DESTINATION lib)
@@ -110,6 +111,8 @@ if(BUILD_SHARED_LIBS)
 else(BUILD_SHARED_LIBS)
   add_library(accfft_utils STATIC ${libaccfft_utils_SRCS})
 endif(BUILD_SHARED_LIBS)
+
+target_link_libraries(accfft_utils accfft)
 
 install(TARGETS accfft_utils DESTINATION lib)
 
